Updated mission statement

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <!-- || MAIN || --> 
   <div class="main__container">
     <div class="section feature-1">
-        <p class="mission-statement" id="ms-part-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+        <p class="mission-statement" id="ms-part-1">We set out on a mission to design sandwiches that are delicious, nutritious and low carbon baby! </p>
         <h1 id="header">Carbs <br> Against <br> Carbon</h1>
     </div>
     <div class="section feature-2">
